--- a/menupage.html
+++ b/menupage.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel = "stylesheet" type="text/css" href= "style.css">
-<link rel="icon" href="images/Logo.jpg">
+<link rel="icon" href="img/Logo.jpg">
 </head>
 
 
@@ -15,7 +15,7 @@
 		<header>
 			<nav class="navi">
 				<ul class="navbar">
-					<li class="navLogo"><a href = "Home.html"><img src="images/Logo.jpg" width="200" height="120"></a></li>																		
+					<li class="navLogo"><a href = "Home.html"><img src="img/Logo.jpg" width="200" height="120"></a></li>																		
 					<li class="nav_right"><a href="contactus.html">Contact Us</a></li>
 					<li class="nav_right">
 						<div class="dropdown">
