--- a/template.html
+++ b/template.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="DP2 - Group 3" content="FoodEdge Gourmet - Home"/>
+		<meta name="DP2 - Group 3" content="FoodEdge Gourmet - typehere"<!-- CHANGE CONTENT "typehere" PART TO PAGE NAME -->
 		<link href="css/style.css" rel="stylesheet" type="text/css"/>
-		<title>FoodeEdge Gourmet - Home</title>
+		<title>FoodeEdge Gourmet - typehere</title><!-- CHANGE TITLE "typehere" PART TO PAGE NAME -->
 		<link rel="icon" href="img/Icon.png">
 	</head>
 
@@ -46,11 +46,7 @@
 		</header>
 		
 		<div id="body">
-			<p>Welcome To FoodEdge Gourmet HomePage</p>
-			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+			<!-- ALL YOUR UI ELEMENTS GO HERE -->
 		</div>
 		
 		<footer>
