add css for food/beverage menu page

--- a/Home.html
+++ b/Home.html
@@ -30,6 +30,7 @@
 					<ul>
 						<li>Food & Beverages Menu
 							<ul>
+								<li><a href="menupage.html">Food/Beverages Menu</a></li>
 								<li><a href="breakfastset.html">Breakfast Set</a></li>
 								<li><a href="lunchseta.html">Lunch Set A</a></li>
 								<li><a href="lunchsetb.html">Lunch Set B</a></li>
