--- a/menupage.html
+++ b/menupage.html
@@ -86,7 +86,7 @@
 				
 				<div class="column">
 					<a href = "bevverageoftheday.html"><img src="img/beverages.jpg" alt="Beverage of the day" style="width:100%"></a>
-					<h1>Breakfast Set</h1>
+					<h1>Beverage of the day</h1>
 					<p class="price">RM10.99/-</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor massa a luctus ultrices. Cras tincidunt lacus ultricies metus malesuada, ac euismod odio facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices ligula ac sapien gravida scelerisque. Donec quis maximus tellus, ut vulputate arcu. Nam in metus eros. Phasellus et lorem dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>					
 				</div>
