User login feature

--- a/template.html
+++ b/template.html
@@ -41,7 +41,7 @@
 					</ul>
 				</div>
 				
-				<div id="contactus"><a href="contactus.html">Contact Us</a></div>
+				<div id="profile"><a href="profile.html">My Profile</a></div>
 			</div>
 		</header>
 		
