--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="DP2 - Group 3" content="FoodEdge Gourmet - typehere"<!-- CHANGE CONTENT "typehere" PART TO PAGE NAME -->
+		<meta name="DP2 - Group 3" content="FoodEdge Gourmet - Login"/>
 		<link href="css/style.css" rel="stylesheet" type="text/css"/>
-		<title>FoodeEdge Gourmet - typehere</title><!-- CHANGE TITLE "typehere" PART TO PAGE NAME -->
+		<title>FoodeEdge Gourmet - Login</title>
 		<link rel="icon" href="img/Icon.png">
 	</head>
 
@@ -28,13 +28,13 @@
 				
 				<div id="menu">
 					<ul>
-						<li>Food & Beverages Menu
-							<ul>
+						<li><a href="menupage.html">Food & Beverages Menu</a>
+							<ul>							
 								<li><a href="breakfastset.html">Breakfast Set</a></li>
 								<li><a href="lunchseta.html">Lunch Set A</a></li>
 								<li><a href="lunchsetb.html">Lunch Set B</a></li>
+								<li><a href="lunchsetc.html">Lunch Set C</a></li>
 								<li><a href="dinnerseta.html">Dinner Set A</a></li>
-								<li><a href="dinnersetb.html">Dinner Set B</a></li>
 								<li><a href="bevverageoftheday.html">Beverage of the day</a></li>
 							</ul>
 						</li>
