--- a/Home.html
+++ b/Home.html
@@ -28,14 +28,13 @@
 				
 				<div id="menu">
 					<ul>
-						<li>Food & Beverages Menu
-							<ul>
-								<li><a href="menupage.html">Food/Beverages Menu</a></li>
+						<li><a href="menupage.html">Food & Beverages Menu</a>
+							<ul>							
 								<li><a href="breakfastset.html">Breakfast Set</a></li>
 								<li><a href="lunchseta.html">Lunch Set A</a></li>
 								<li><a href="lunchsetb.html">Lunch Set B</a></li>
+								<li><a href="lunchsetc.html">Lunch Set C</a></li>
 								<li><a href="dinnerseta.html">Dinner Set A</a></li>
-								<li><a href="dinnersetb.html">Dinner Set B</a></li>
 								<li><a href="bevverageoftheday.html">Beverage of the day</a></li>
 							</ul>
 						</li>
