--- a/lunchsetc.html
+++ b/lunchsetc.html
@@ -35,7 +35,7 @@
 								<li><a href="lunchsetb.html">Lunch Set B</a></li>
 								<li><a href="lunchsetc.html">Lunch Set C</a></li>
 								<li><a href="dinnerseta.html">Dinner Set A</a></li>
-								<li><a href="bevverageoftheday.html">Beverage of the day</a></li>
+								<li><a href="beverageoftheday.html">Beverage of the day</a></li>
 							</ul>
 						</li>
 					</ul>
