change enquire button

--- a/breakfastset.html
+++ b/breakfastset.html
@@ -76,7 +76,7 @@
 					</div>
 					<div id="enquire">
 						<form action="editselection.html" method="post">
-							<button type="submit" formaction="editselection.html" id="enquirenow">Enquire Now</button>
+							<button type="submit" formaction="editselection.html" id="enquirenow">Add to selection</button>
 						</form>
 					</div>
 				</div>
