--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 			<p>Welcome To FoodEdge Gourmet HomePage</p>
 			<a href="editselection.html">Click here to view Edit Selection Page</a><br/>
 			<a href="home.html">Click here to view Home Page</a><br/>
-			<a href="login.html">Click here to view Login Page</a><br/>
+			<a href="login.php">Click here to view Login Page</a><br/>
 			<a href="menupage.html">Click here to view Menu Page</a><br/>
 			<a href="template.html">Click here to view Template Page</a><br/>
 			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
