Add registration page and modify user profile page

--- a/profile.html
+++ b/profile.html
@@ -45,49 +45,52 @@
 			</div>
 		</header>
 		
-		<div id="body">
-			<div id="profilebody">
-				<figure id="profpic">
-					<a href="editprofile.html" id="profedit">
-						<img src="img/kevin.png" alt="Profile picture" title="Edit profile">
-					</a>
-				</figure>
-				<div id="profcontainer">
-					<div id="profmember">
-						<h2>Membership</h2>
-						<hr>
-						<p><span class="proftitle">Member ID:</span><br>
-						<span class="profcontent">001246</span></p>
-						<p><span class="proftitle">Membership status:</span><br>
-						<span class="profcontent">Gold</span></p>
-						<p><span class="proftitle">Username:</span><br>
-						<span class="profcontent">Kevfamouschili</span></p>
-					</div>
-					<br>
-					<div id="profabout">
-						<h2>About</h2>
-						<hr>
-						<p><span class="proftitle">First Name:</span><br>
-						<span class="profcontent">Kevin</span></p>
-						<p><span class="proftitle">Last Name:</span><br>
-						<span class="profcontent">Malone</span></p>
-						<p><span class="proftitle">Date Join:</span><br>
-						<span class="profcontent">07/10/2020</span></p>
-					</div>
-					<div id="profcontact">
-						<h2>Contact</h2>
-						<hr>
-						<p><span class="proftitle">Email:</span><br>
-						<span class="profcontent">kevinmalone@gmail.com</span></p>
-						<p><span class="proftitle">Phone:</span><br>
-						<span class="profcontent">+60123456789</span></p>
-						<p><span class="proftitle">Address:</span><br>
-						<span class="profcontent">456 Lorong 7 Jalan Batu Kawa 93250 Kuching Sarawak</span></p>
-					</div>
-					<br>
+
+		<div id="profilebody">
+			<h1>Hi Kevin,</h1>
+			<p id="profdesc">Welcome to your FoodEdge Gourmet Profile page.</p>
+			<figure id="profpic">
+				<a href="editprofile.html" id="profedit">
+					<img src="img/kevin.png" alt="Profile picture" title="Edit profile">
+				</a>
+			</figure>
+			<div id="profcontainer">
+				<div id="profmember">
+					<h2>Membership</h2>
+					<hr>
+					<p><span class="proftitle">Member ID:</span><br>
+					<span class="profcontent">001246</span></p>
+					<p><span class="proftitle">Membership status:</span><br>
+					<span class="profcontent">Gold</span></p>
+					<p><span class="proftitle">Username:</span><br>
+					<span class="profcontent">Kevfamouschili</span></p>
 				</div>
-			</div>	
-		</div>
+				<br>
+				<div id="profabout">
+					<h2>About</h2>
+					<hr>
+					<p><span class="proftitle">First Name:</span><br>
+					<span class="profcontent">Kevin</span></p>
+					<p><span class="proftitle">Last Name:</span><br>
+					<span class="profcontent">Malone</span></p>
+					<p><span class="proftitle">Date Join:</span><br>
+					<span class="profcontent">07/10/2020</span></p>
+				</div>
+				<br>
+				<div id="profcontact">
+					<h2>Contact</h2>
+					<hr>
+					<p><span class="proftitle">Email:</span><br>
+					<span class="profcontent">kevinmalone@gmail.com</span></p>
+					<p><span class="proftitle">Phone:</span><br>
+					<span class="profcontent">+60123456789</span></p>
+					<p><span class="proftitle">Address:</span><br>
+					<span class="profcontent">456 Lorong 7 Jalan Batu Kawa 93250 Kuching Sarawak</span></p>
+				</div>
+				<br>
+			</div>
+		</div>	
+
 		
 		<footer>
 			<nav>
