--- a/home.html
+++ b/home.html
@@ -42,6 +42,8 @@
 				</div>
 				
 				<div id="profile"><a href="profile.html">My Profile</a></div>
+				
+				<div id="selection"><a href="editselection.html">Selection</a></div>
 			</div>
 		</header>
 		
