--- a/breakfastset.html
+++ b/breakfastset.html
@@ -39,7 +39,7 @@
 		</header>
 		
 		<div id="body" class="bfcontainer">
-			<div id = "product-content" class="row">
+			<div id = "product-content" class="row_menu">
 				<div class = "bfimg">
 					
 					<figure class="product_wrapper">						
@@ -52,11 +52,11 @@
 					<h1 class="product_title">Breakfast Set</h1>
 					<p class="price">
 						<span class="product-amount">
-							<span class="price">RM 19.99</span>
+							<span class="pricetag">RM 19.99</span>
 						</span>
 					</p>
 					<div id="product_details">
-						<p>Menu details:</p>
+						<p><strong>Menu details:</strong></p>
 						<ul>
 							<li>Bagel</li>
 							<li>Breakfast burrito</li>
