--- a/dinnerseta.html
+++ b/dinnerseta.html
@@ -39,7 +39,7 @@
 		</header>
 		
 		<div id="body" class="lunchsetacontainer">
-			<div id = "product-content" class="row">
+			<div id = "product-content" class="row_menu">
 				<div class = "lsetaimg">
 					
 					<figure class="product_wrapper">						
@@ -52,7 +52,7 @@
 					<h1 class="product_title">Dinner Set A</h1>
 					<p class="price">
 						<span class="product-amount">
-							<span class="price">RM 35.99</span>
+							<span class="pricetag">RM 35.99</span>
 						</span>
 					</p>
 					<div id="product_details">
