Submit Booking Feature Added

--- a/editselection.html
+++ b/editselection.html
@@ -46,7 +46,7 @@
 				<table id="containeritem1" style="width:100%">
 					<tr>
 						<td>
-							<img src="img/smallbreakfast.jpg" alt="reduce" id="reduceqty" height="100px"/>
+							<img src="img/smallbreakfast.jpg" alt="Item Image" height="100px"/>
 							<ul>							
 								<li>Breakfast Set</li>
 								<li>RM19.99</li>
@@ -74,7 +74,7 @@
 				<table id="containeritem2" style="width:100%">
 					<tr>
 						<td>
-							<img src="img/smalllunchA.jpg" alt="reduce" id="reduceqty" height="100px"/>
+							<img src="img/smalllunchA.jpg" alt="Item Image" height="100px"/>
 							<ul>							
 								<li>Lunch Set A</li>
 								<li>RM24.99</li>
@@ -102,7 +102,7 @@
 				<table id="containeritem3" style="width:100%">
 					<tr>
 						<td>
-							<img src="img/smalllunchB.jpg" alt="reduce" id="reduceqty" height="100px"/>
+							<img src="img/smalllunchB.jpg" alt="Item Image" height="100px"/>
 							<ul>							
 								<li>Lunch Set B</li>
 								<li>RM28.99</li>
@@ -130,7 +130,7 @@
 				<table id="containeritem4" style="width:100%">
 					<tr>
 						<td>
-							<img src="img/smalllunchC.jpg" alt="reduce" id="reduceqty" height="100px"/>
+							<img src="img/smalllunchC.jpg" alt="Item Image" height="100px"/>
 							<ul>							
 								<li>Lunch Set C (100% Vegan Friendly)</li>
 								<li>RM22.99</li>
@@ -158,7 +158,7 @@
 				<table id="containeritem5" style="width:100%">
 					<tr>
 						<td>
-							<img src="img/smalldinner.jpg" alt="reduce" id="reduceqty" height="100px"/>
+							<img src="img/smalldinner.jpg" alt="Item Image" height="100px"/>
 							<ul>							
 								<li>Dinner Set A</li>
 								<li>RM35.99</li>
@@ -186,7 +186,7 @@
 				<table id="containeritem6" style="width:100%">
 					<tr>
 						<td>
-							<img src="img/smallbeverages.jpg" alt="reduce" id="reduceqty" height="100px"/>
+							<img src="img/smallbeverages.jpg" alt="Item Image" height="100px"/>
 							<ul>							
 								<li>Beverage of the day</li>
 								<li>RM10.99</li>
@@ -216,6 +216,7 @@
 				</div>
 				
 				<form action="home.html" method="post">
+					<button onclick="saveselections()" formaction="submitbooking.html" id="booknow">Book Now</button>
 					<button onclick="saveselections()" formaction="home.html" id="saveselection">Save Changes</button>
 				</form>
 			</div>
