--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 				
 				<div id="about"><a href="aboutus.html">About</a></div>
 				
-				<div id="profile"><a href="login.php">Login</a></div>
+				<div id="profile"><a href="profile.html">Profile</a></div>
 			</div>
 		</header>
 		
