Add edit profile page

--- a/profile.html
+++ b/profile.html
@@ -45,6 +45,7 @@
 				<a href="editprofile.html" id="profedit">
 					<img src="img/kevin.png" alt="Profile picture" title="Edit profile">
 				</a>
+				<p><a href="editprofile.html">Edit Profile</a></p>
 			</figure>
 			<div id="profcontainer">
 				<div id="profmember">
