update action to payment confirmation

--- a/payment.html
+++ b/payment.html
@@ -48,7 +48,7 @@
 		<div id="body" class="row">
 		<div class="col-75">
 			<div class="container">
-				<form name="paymentForm" method="post" action="payment.php" onsubmit="return validateForm()">
+				<form name="paymentForm" method="post" action="paymentConfirmation.html" onsubmit="return validateForm()">
 
 					<div class="row">
 						<div class="col-50">
@@ -114,12 +114,12 @@
 						<b>6</b>
 					</span>
 				</h4>
-				<p><a href="#">Breakfast Set</a> <span class="price">RM19.99</span></p>
-				<p><a href="#">Lunch Set A</a> <span class="price">RM24.99</span></p>
-				<p><a href="#">Lunch Set B</a> <span class="price">RM28.99</span></p>
-				<p><a href="#">Lunch Set C</a> <span class="price">RM22.99</span></p>
-				<p><a href="#">Dinner Set</a> <span class="price">RM35.99</span></p>
-				<p><a href="#">Beverage of the day</a> <span class="price">RM10.99</span></p>
+				<p><a href="breakfastset.html">Breakfast Set</a> <span class="price">RM19.99</span></p>
+				<p><a href="lunchseta.html">Lunch Set A</a> <span class="price">RM24.99</span></p>
+				<p><a href="lunchsetb.html">Lunch Set B</a> <span class="price">RM28.99</span></p>
+				<p><a href="lunchsetc.html">Lunch Set C</a> <span class="price">RM22.99</span></p>
+				<p><a href="dinnerseta.html">Dinner Set</a> <span class="price">RM35.99</span></p>
+				<p><a href="beverageoftheday.html">Beverage of the day</a> <span class="price">RM10.99</span></p>
 				<hr>
 				<p>Total <span class="price" style="color:black"><b>RM143.94</b></span></p>
 				</div>
