Update edit profile page

--- a/editprofile.html
+++ b/editprofile.html
@@ -34,7 +34,7 @@
 				
 				<div id="about"><a href="aboutus.html">About</a></div>
 				
-				<div id="profile"><a href="login.php">Login</a></div>
+				<div id="profile"><a href="profile.html">Profile</a></div>
 			</div>
 		</header>
 		
@@ -42,7 +42,7 @@
 		<div id="editbody">
 			<h1>Edit Profile</h1>
 			
-			<form action="profile.html" method="">
+			<form action="profile.html" method="post">
 				<input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)" style="display:none;">
 
 				<img src="img/kevin.png" id="output" width="200" height="200" style="border-radius:50%; object-fit:cover;"/>
