--- a/menupage.html
+++ b/menupage.html
@@ -34,7 +34,7 @@
 				
 				<div id="about"><a href="aboutus.html">About</a></div>
 				
-				<div id="profile"><a href="profile.html">Profile</a></div>
+				<div id="profile"><a href="login.php">Profile</a></div>
 			</div>
 		</header>
 		
